--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   device_preview: ^1.2.0
   flutter_svg: ^2.0.16
   smooth_page_indicator: ^1.2.0+3
+  table_calendar: ^3.1.3
+  intl: ^0.19.0
 
 
 dev_dependencies:
